Fixed NeedHelpTestCase by updating texts and links changed in JBEAP-5948

--- a/common/src/main/resources/label.properties
+++ b/common/src/main/resources/label.properties
@@ -206,7 +206,7 @@ runtime.server.switch.button=button.table-picker
 
 homepage.title.class=eap-home-title
 
-homepage.newtoeap.text=New to JBoss EAP7?
+homepage.newtoeap.text=New to JBoss EAP 7?
 homepage.newtoeap.link=Take a Tour
 homepage.newtoeap.content.class=eap-quick-tour-steps
 
@@ -223,12 +223,12 @@ homepage.module.patching.link.label=Patching
 homepage.module.deployments.link.label=Deployments
 
 homepage.needhelp.general.title=General Resources
-homepage.needhelp.general.links.doc.label=Read JBoss EAP Documentation
-homepage.needhelp.general.links.doc.href=https://access.redhat.com/site/documentation/JBoss_Enterprise_Application_Platform/
+homepage.needhelp.general.links.doc.label=Read JBoss EAP documentation
+homepage.needhelp.general.links.doc.href=https://access.redhat.com/documentation/en/red-hat-jboss-enterprise-application-platform/
 homepage.needhelp.general.links.about.label=Learn more about JBoss EAP
 homepage.needhelp.general.links.about.href=http://www.redhat.com/products/jbossenterprisemiddleware/application-platform/
-homepage.needhelp.general.links.help.label=Get help or submit a trouble ticket
-homepage.needhelp.general.links.help.href=https://access.redhat.com/home
+homepage.needhelp.general.links.help.label=Get help or submit a support ticket
+homepage.needhelp.general.links.help.href=https://access.redhat.com/
 homepage.needhelp.general.links.training.label=Sign up for Red Hat training courses
 homepage.needhelp.general.links.training.href=https://www.redhat.com/training/paths/?cr=cp|tr|pp|00002
 
@@ -237,11 +237,11 @@ homepage.needhelp.gethelp.links.quickstarts.label=Access tutorials and quickstar
 homepage.needhelp.gethelp.links.quickstarts.href=http://www.jboss.org/quickstarts/eap/
 homepage.needhelp.gethelp.links.community.label=Ask questions to the development community
 homepage.needhelp.gethelp.links.community.href=https://community.jboss.org/en/jbosseap
-homepage.needhelp.gethelp.links.matrix.label=View supported configurations for JBoss EAP
+homepage.needhelp.gethelp.links.matrix.label=View JBoss EAP supported configurations
 homepage.needhelp.gethelp.links.matrix.href=https://access.redhat.com/articles/2026253/
-homepage.needhelp.gethelp.links.kb.label=Search the Red Hat knowledgebase for solutions to issues you encounter
-homepage.needhelp.gethelp.links.kb.href=https://access.redhat.com/site/knowledgebase
-homepage.needhelp.gethelp.links.consulting.label=Reach out to Red Hat consulting for further help from experts
+homepage.needhelp.gethelp.links.kb.label=Search the Red Hat Knowledgebase
+homepage.needhelp.gethelp.links.kb.href=https://access.redhat.com/knowledgebase
+homepage.needhelp.gethelp.links.consulting.label=Reach out to the experts in Red Hat Consulting
 homepage.needhelp.gethelp.links.consulting.href=https://www.redhat.com/consulting/
 
 # Various Components
