--- a/pom.xml
+++ b/pom.xml
@@ -167,7 +167,7 @@
     <dependency>
       <groupId>org.wildfly.core</groupId>
       <artifactId>wildfly-cli</artifactId>
-      <version>2.0.5.Final</version>
+      <version>3.0.0.Alpha7</version>
     </dependency>
 
     <dependency>
