Added tests for prepared transactions

--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,13 @@
     </profile>
 
     <profile>
+      <id>transactions</id>
+      <modules>
+        <module>transactions</module>
+      </modules>
+    </profile>
+
+    <profile>
       <id>serverCheck</id>
       <build>
         <plugins>
