--- a/transactions/pom.xml
+++ b/transactions/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>transactions</artifactId>
+    <artifactId>hal-testsuite-transactions</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.jboss.as</groupId>
