Improved tests for test datasource connection in standalone Rewritten old tests to be compatible with most recent changes.

--- a/common/src/main/resources/label.properties
+++ b/common/src/main/resources/label.properties
@@ -62,6 +62,7 @@ modals.window.content.title.tag=h3
 modals.window.spinner.class=spinner
 
 modals.wizard.next.label=Next
+modals.wizard.back.label=Next
 modals.wizard.finish.label=Finish
 modals.wizard.done.label=Done
 
