--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,14 @@
         <scope>provided</scope>
       </dependency>
 
+      <!-- JPA dependency -->
+      <dependency>
+        <groupId>javax.persistence</groupId>
+        <artifactId>persistence-api</artifactId>
+        <version>1.0</version>
+        <scope>provided</scope>
+      </dependency>
+
       <!-- Client dependencies -->
       <dependency>
         <groupId>org.wildfly</groupId>
