--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <as.managementPort>9990</as.managementPort>
     <arq.managementPort>${as.managementPort}</arq.managementPort>
     <take.screenshot.after.each.test>false</take.screenshot.after.each.test>
-    <version.org.wildfly.extras.creaper>1.4.0</version.org.wildfly.extras.creaper>
+    <version.org.wildfly.extras.creaper>1.5.1-SNAPSHOT</version.org.wildfly.extras.creaper>
     <version.org.jgrapht>0.9.1</version.org.jgrapht>
   </properties>
 
@@ -45,6 +45,11 @@
       <id>jboss-public-repository-group</id>
       <name>JBoss Public Maven Repository Group</name>
       <url>http://repository.jboss.org/nexus/content/groups/public/</url>
+    </repository>
+    <repository>
+      <id>jboss-snapshots-repository</id>
+      <name>JBoss Snapshots Repository</name>
+      <url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
     </repository>
   </repositories>
 
