--- a/common/src/main/resources/label.properties
+++ b/common/src/main/resources/label.properties
@@ -227,11 +227,11 @@ homepage.needhelp.general.title=General Resources
 homepage.needhelp.general.links.doc.label=Read JBoss EAP documentation
 homepage.needhelp.general.links.doc.href=https://access.redhat.com/documentation/en/red-hat-jboss-enterprise-application-platform/
 homepage.needhelp.general.links.about.label=Learn more about JBoss EAP
-homepage.needhelp.general.links.about.href=http://www.redhat.com/products/jbossenterprisemiddleware/application-platform/
+homepage.needhelp.general.links.about.href=https://www.redhat.com/en/technologies/jboss-middleware/application-platform
 homepage.needhelp.general.links.help.label=Get help or submit a support ticket
 homepage.needhelp.general.links.help.href=https://access.redhat.com/
 homepage.needhelp.general.links.training.label=Sign up for Red Hat training courses
-homepage.needhelp.general.links.training.href=https://www.redhat.com/training/paths/?cr=cp|tr|pp|00002
+homepage.needhelp.general.links.training.href=https://www.redhat.com/en/services/training/courses-by-curriculum
 
 homepage.needhelp.gethelp.title=Get Help
 homepage.needhelp.gethelp.links.quickstarts.label=Access tutorials and quickstarts
