--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <as.managementPort>9990</as.managementPort>
     <arq.managementPort>${as.managementPort}</arq.managementPort>
     <take.screenshot.after.each.test>false</take.screenshot.after.each.test>
-    <version.org.wildfly.extras.creaper>1.5.1-SNAPSHOT</version.org.wildfly.extras.creaper>
+    <version.org.wildfly.extras.creaper>1.6.0</version.org.wildfly.extras.creaper>
     <version.org.jgrapht>0.9.1</version.org.jgrapht>
     <version.org.apache.maven.plugins.maven-checkstyle-plugin>2.17</version.org.apache.maven.plugins.maven-checkstyle-plugin>
     <version.com.puppycrawl.tools.checkstyle>RELEASE</version.com.puppycrawl.tools.checkstyle>
