--- a/basic/pom.xml
+++ b/basic/pom.xml
@@ -43,6 +43,10 @@
       <groupId>org.wildfly.core</groupId>
       <artifactId>wildfly-elytron-integration</artifactId>
     </dependency>
+    <dependency>
+      <groupId>javax.security.jacc</groupId>
+      <artifactId>javax.security.jacc-api</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
