--- a/pom.xml
+++ b/pom.xml
@@ -354,6 +354,9 @@
         <test.included.category>
           org.jboss.hal.testsuite.category.Elytron
         </test.included.category>
+        <test.excluded.category>
+          org.jboss.hal.testsuite.category.KnownIssue
+        </test.excluded.category>
       </properties>
     </profile>
 
@@ -364,6 +367,9 @@
           org.jboss.hal.testsuite.category.PicketBox,
           org.jboss.hal.testsuite.category.PicketLink
         </test.included.category>
+        <test.excluded.category>
+          org.jboss.hal.testsuite.category.KnownIssue
+        </test.excluded.category>
       </properties>
     </profile>
 
@@ -371,6 +377,7 @@
       <id>noSecurity</id>
       <properties>
         <test.excluded.category>
+          org.jboss.hal.testsuite.category.KnownIssue,
           org.jboss.hal.testsuite.category.Elytron,
           org.jboss.hal.testsuite.category.PicketBox,
           org.jboss.hal.testsuite.category.PicketLink
