--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,7 @@
       <artifactId>selenium-bom</artifactId>
       <version>2.39.0</version>
       <type>pom</type>
-      <scope>import</scope>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
@@ -387,6 +387,7 @@
       </properties>
     </profile>
 
+
   </profiles>
 
   <build>
@@ -412,10 +413,10 @@
           </execution>
         </executions>
       </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.20.1</version>
         <configuration>
           <systemPropertyVariables>
             <browser>${browser}</browser>
@@ -430,8 +431,6 @@
             <arq.managementPort>${arq.managementPort}</arq.managementPort>
           </systemPropertyVariables>
           <argLine>${argLine}</argLine>
-          <groups>${test.included.category}</groups>
-          <excludedGroups>${mode.excluded.category},${test.excluded.category}</excludedGroups>
         </configuration>
       </plugin>
 
@@ -461,6 +460,7 @@
               <includeTestSourceDirectory>true</includeTestSourceDirectory>
               <consoleOutput>true</consoleOutput>
               <failsOnError>true</failsOnError>
+              <linkXRef>false</linkXRef>
               <configLocation>checkstyle.xml</configLocation>
             </configuration>
           </execution>
@@ -485,7 +485,6 @@
           </execution>
         </executions>
       </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
